# qrdm

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  SPDX.spdx  docker-compose.yml  pyproject.toml  setup.py  tox.ini
.github/: README.md
conf/nginx/: nginx.conf
conf/nginx/conf.d/: default.conf  dhparam.pem  ssl.conf
conf/nginx/private/: server-cert.pem  server-key.pem
docs/_build/html/: .buildinfo  backend.html  docker.html  frontend.html  genindex.html  index.html  install.html  objects.inv  reference.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/qrdm/qr/: decode.html  encode.html
docs/_build/html/_sources/: backend.md.txt  docker.md.txt  frontend.md.txt  install.md.txt  reference.rst.txt
docs/source/: backend.md  conf.py  index.md
src/qrdm/: __init__.py  exceptions.py  models.py
src/qrdm/backend/: __init__.py  config.py  main.py
src/qrdm/backend/routers/: __init__.py  qr.py
src/qrdm/qr/: __init__.py  _const.py  decode.py  encode.py  pdf_writer.py
src/qrdm/qr/data/: __init__.py  qr_capacity.csv
src/qrdm/qr/protobuf/: __init__.py  qrdm.proto  qrdm_pb2.py  qrdm_pb2.pyi
tests/: test_backend.py  test_qr_functions.py
ui/: QRDM_Home.py
ui/pages/: 1_QR_Encode.py  2_QR_Decode.py
